Added resourcenotfound exception handling